--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "json-server": "^0.16.2",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
