--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "express": "^4.16.3",
     "firebase": "^8.0.2",
     "if-env": "^1.0.4",
     "mongoose": "^5.10.11",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "reactstrap": "^8.7.1",
     "recompose": "^0.30.0"
   },
   "repository": {
