--- a/client/.env
+++ b/client/.env
@@ -4,3 +4,4 @@ REACT_APP_DATABASE_URL="https://mern-authentication-c6af2.firebaseio.com"
 REACT_APP_PROJECT_ID="mern-authentication-c6af2"
 REACT_APP_STORAGE_BUCKET="mern-authentication-c6af2.appspot.com"
 REACT_APP_MESSAGING_SENDER_ID="404350980025"
+MONGODB_URI=mongodb+srv://kaagh_10:kaagh.10@cluster0.mwndg.mongodb.net/shopsmart?retryWrites=true&w=majority
