--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "firebase": "^8.0.2",
     "if-env": "^1.0.4",
